# tournament-forecaster

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gitleaks.yml  release-gate.yml  release.yml
.superpowers/sdd/: task-5a-report.md
config/: bracket.config.json  group_fixtures.config.json  groups.config.json  worldcup_brazil.example.json
docs/: ADDING_A_COMPETITION.md  ADDING_A_PROVIDER.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_POLICY.md  MIGRATION_FROM_WORLDCUP_BRAZIL.md  PRODUCT_FLOW.md  PROVIDERS.md  knockout-stage-output-contract.md
docs/assets/architecture/: README.md  generate.py  manifest.json
docs/decisions/: 2026-07-13-multi-llm-council.md  README.md
docs/superpowers/plans/: 2026-06-18-worldcup-run-reliability-hardening.md  2026-06-19-worldcup-run-846-assertiveness-plan.md  2026-07-10-aws-style-architecture-diagrams.md  2026-07-10-tournament-forecaster-productization.md  2026-07-13-code-quality-hardening.md  2026-07-13-first-class-llm-council.md  2026-07-13-libertadores-live-example.md
docs/superpowers/specs/: 2026-07-10-open-source-tournament-forecaster-design.md
examples/: council.example.json
examples/copa-libertadores-2026-live/: DATA_SOURCES.md  README.md  tournament.json
examples/world-cup-2026-live/: DATA_SOURCES.md  README.md  backtest-report.json  backtest-report.md  backtest.json  tournament.json
presets/champions-league-style/: DATA_SOURCES.md  tournament.json
presets/libertadores-style/: DATA_SOURCES.md  tournament.json
presets/synthetic-cup/: DATA_SOURCES.md  tournament.json
presets/world-cup-style/: DATA_SOURCES.md
scripts/: build_world_cup_2026_example.py  calibrate_base_rating.py  calibrate_rho.py  check_english_surface.py  generate_framework_diagram_pngs.py  profile_run.py  render_debate_report.py  run_agent_source_harness.py  run_daily_worldcup_brazil.py  update_group_results.py  update_market_odds.py  validate_blind_peer_review_contract.py  validate_calibration.py  validate_opponent_room_contract.py
src/tournament_forecaster/: __init__.py  __main__.py  atomic_io.py  backtest.py  cli.py  config.py  domain.py  errors.py  group_fixtures.py  pairing.py  probabilities.py  qualification.py  resources.py  simulation.py  standings.py  validation.py
src/tournament_forecaster/compatibility/: __init__.py  worldcup_brazil.py
src/tournament_forecaster/council/: __init__.py  blend.py  config.py  models.py  prompts.py  providers.py  runner.py
src/tournament_forecaster/data/presets/champions-league-style/: tournament.json
src/tournament_forecaster/data/presets/libertadores-style/: tournament.json
src/tournament_forecaster/data/presets/world-cup-style/: tournament.json
src/tournament_forecaster/data/templates/group-knockout/: README.md  tournament.json
src/tournament_forecaster/data/templates/group-two-leg-knockout/: README.md  tournament.json
src/tournament_forecaster/data/templates/league-knockout/: README.md  tournament.json
src/tournament_forecaster/providers/: __init__.py  odds.py  results.py  security.py
src/tournament_forecaster/reports/: __init__.py  bracket_svg.py  json_report.py  markdown_report.py  publication.py
src/tournament_forecaster/schemas/: backtest.schema.json  council.schema.json  forecast.schema.json  odds.import.schema.json  results.import.schema.json  tournament.schema.json
src/tournament_forecaster/stages/: __init__.py  group_stage.py  knockout_stage.py  league_stage.py
tests/: test_agents_fallbacks.py  test_announcement_diagrams.py  test_blind_peer_review_contract.py  test_bracket_config.py  test_calibration.py  test_clean_source_install.py  test_clean_wheel.py  test_cli_resilience.py  test_config.py  test_consensus.py  test_debate_report.py  test_env_loading.py  test_event_impact_harness.py  test_infographic.py  test_makefile_contract.py  test_market_value_momentum.py  test_meeting.py  test_meeting_flow_controls.py  test_model_influence.py  test_monte_carlo.py  test_pipeline_match_application.py  test_post_template.py  test_probabilities.py  test_profile_run.py  test_prompts.py  test_public_repository_contract.py  test_readme_diagrams.py  test_release_gate_platform_contract.py  test_renderer.py  test_retired_agent_removed.py  test_sanitizer_fixes.py  test_scheduler.py  test_script_entrypoint.py  test_source_memory.py  test_source_planning_harness.py  test_sources.py  test_tournament_forecast_cli.py  test_update_group_results.py  test_update_market_odds.py  test_watchdog.py
tests/examples/: test_copa_libertadores_2026.py  test_openfootball_world_cup_2026.py  test_world_cup_2026_live.py
tests/examples/fixtures/: fifa-calendar-edge-cases.json  openfootball-edge-cases.json
tests/presets/: test_format_contracts.py
tests/tournament_forecaster/: test_atomic_io.py  test_backtest.py  test_council_blend.py  test_council_config.py  test_council_providers.py  test_council_runner.py  test_domain_and_config.py  test_group_stage.py  test_knockout_stage.py  test_league_stage.py  test_legacy_compatibility.py  test_numeric_validation.py  test_odds_provider.py  test_outcome_probabilities.py  test_package_resources.py  test_pairing.py  test_reports.py  test_results_provider.py  test_simulation.py  test_standings.py
tests/tournament_forecaster/fixtures/: forecast-v2-pre-stage-order.json
worldcup_brazil/: __init__.py  agents.py  atomic_io.py  bracket.py  calibration.py  cli.py  consensus.py  debate_report.py  infographic.py  meeting.py  models.py  monte_carlo.py  pipeline.py  post_template.py  probabilities.py  renderer.py  scheduler.py  source_memory.py  sources.py  watchdog.py
