[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tournament-forecaster"
version = "0.1.0"
description = "Configuration-driven tournament forecasting."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Marcus Cavalcanti" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.27,<2",
  "jsonschema>=4.23,<5",
  "mypy>=1.13,<2",
  "Pillow>=11,<13",
  "pytest>=8.3,<10",
  "pytest-socket>=0.7,<1",
  "ruff>=0.9,<1",
  "twine>=6,<7",
  "types-jsonschema>=4.23,<5",
]

[project.urls]
Homepage = "https://github.com/marcuscavalcanti/worldcup2026"
Documentation = "https://github.com/marcuscavalcanti/worldcup2026#readme"
Issues = "https://github.com/marcuscavalcanti/worldcup2026/issues"
Source = "https://github.com/marcuscavalcanti/worldcup2026"

[project.scripts]
tournament-forecast = "tournament_forecaster.cli:main"
worldcup-brazil-report = "worldcup_brazil.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tournament_forecaster", "worldcup_brazil"]

[tool.hatch.build.targets.sdist]
include = [
  "/.env.example",
  "/.gitignore",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/Makefile",
  "/NOTICE.md",
  "/README.md",
  "/SECURITY.md",
  "/config/worldcup_brazil.example.json",
  "/docs/ADDING_A_COMPETITION.md",
  "/docs/ADDING_A_PROVIDER.md",
  "/docs/ARCHITECTURE.md",
  "/docs/CONFIGURATION.md",
  "/docs/DATA_POLICY.md",
  "/docs/MIGRATION_FROM_WORLDCUP_BRAZIL.md",
  "/docs/PRODUCT_FLOW.md",
  "/docs/PROVIDERS.md",
  "/docs/assets/architecture/README.md",
  "/docs/assets/architecture/generate.py",
  "/docs/assets/architecture/manifest.json",
  "/docs/assets/architecture/product-flow.png",
  "/docs/assets/architecture/product-flow.svg",
  "/docs/assets/architecture/technical-architecture.png",
  "/docs/assets/architecture/technical-architecture.svg",
  "/docs/knockout-stage-output-contract.md",
  "/examples/world-cup-2026-live/DATA_SOURCES.md",
  "/examples/world-cup-2026-live/README.md",
  "/examples/world-cup-2026-live/backtest-report.json",
  "/examples/world-cup-2026-live/backtest-report.md",
  "/examples/world-cup-2026-live/backtest.json",
  "/examples/world-cup-2026-live/tournament.json",
  "/presets/champions-league-style/DATA_SOURCES.md",
  "/presets/champions-league-style/tournament.json",
  "/presets/libertadores-style/DATA_SOURCES.md",
  "/presets/libertadores-style/tournament.json",
  "/presets/synthetic-cup/DATA_SOURCES.md",
  "/presets/synthetic-cup/tournament.json",
  "/presets/world-cup-style/DATA_SOURCES.md",
  "/presets/world-cup-style/tournament.json",
  "/pyproject.toml",
  "/src/tournament_forecaster",
  "/worldcup_brazil",
]
exclude = [
  "/.github",
  "/.superpowers",
  "/.venv",
  "/attachments",
  "/build",
  "/data",
  "/dist",
  "/docs/superpowers",
  "/outputs",
  "/provider_raw",
  "/raw_provider_payloads",
  "/scripts",
  "/tests",
  "/uv.lock",
  "/**/__pycache__",
  "/**/*.local.*",
  "/**/*.pyc",
  "/**/*.pyo",
  "/**/outputs/**",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
exclude = [
  "^worldcup_brazil/",
  "^src/tournament_forecaster/compatibility/",
]
